<resources>
    <string name="app_name">attendeance</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_Repassword_hint">Re password</string>

    <string name="user_name">Student</string>
    <string name="welcome_back_in_main">Welcome Back</string>
    <string name="Log_out">Log Out</string>
    <string name="kind_of_user">You Are Admin</string>

    <string name="facebook_app_id">291685792487921</string>
    <string name="fb_login_protocol_scheme">fb291685792487921</string>
    <string name="Attendance">Attendance</string>
    <string name="generate_QR_code">generate QR code</string>
    <string name="chat">chat</string>
    <string name="phone_number">Phone Number</string>
    <string name="Edit">Edit</string>
    <string name="save">Save</string>
    <string name="admin">Admin</string>
    <string name="Student">Student</string>
    <string name="firstNameHint">First Name</string>
    <string name="LastNameHint">Last Name</string>
    <string name="userKind">User Kind</string>
    <string name="user_id">Id</string>
    <string name="todo">TODO</string>
    <string name="generate_QR_value">Enter Value</string>
    <string name="generate_QR_code_admin">Generate</string>
    <string name="auto_generate_QR_code">Auto Generate</string>
    <string name="kind_of_user_student">You Are Student</string>
    <string name="roomTitle">Room Title</string>
    <string name="Weeks">Weeks</string>

</resources>
