<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    tools:context=".DetailsActivity">




        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar_details"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/register_bk_color"
            android:fitsSystemWindows="true" />




    <ImageView
        android:id="@+id/image_in_details"
        android:layout_width="match_parent"

        android:layout_below="@+id/tool_bar_details"

        android:layout_height="200dp"
android:scaleType="centerCrop"
        android:background="@drawable/image_shape"
        android:src="@drawable/ic_profile" />

    <ScrollView
        android:layout_below="@+id/image_in_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp">


            <EditText
                android:id="@+id/edit_text_name_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/ic_user_name"
                android:enabled="false"
                android:paddingTop="30dp"
                android:text="@string/user_name" />


            <EditText
                android:id="@+id/edit_text_email_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/ic_email"
                android:enabled="false"
                android:paddingTop="30dp"
                android:text="@string/login_email_hint" />


            <EditText
                android:id="@+id/edit_text_number_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/ic_phone_numbers_call"
                android:enabled="false"
                android:paddingTop="30dp"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/edit_text_password_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/ic_password"
                android:enabled="false"
                android:inputType="textPassword"
                android:paddingTop="30dp"

                />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>