<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bk_color"
    tools:context=".Activity.AdminActivity">
    <TextView
        android:id="@+id/admin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-10dp"

        android:text="@string/admin"
        android:textColor="@color/black"
        android:textSize="@dimen/user_name_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"

        android:text="@string/welcome_back_in_main"
        android:textAllCaps="true"
        android:textColor="@color/out_line"
        android:textSize="@dimen/welcome_text_size" />

    <ImageView
        android:id="@+id/admin_image"
        android:layout_width="95dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"

        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/image_shape"
        android:contentDescription="TODO"
        android:src="@drawable/ic_profile" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/admin_image"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginStart="10dp"

            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:foregroundGravity="clip_horizontal|center"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="6dp">


                    <TextView

                        android:id="@+id/Attendance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/ic_immigration"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:padding="40dp"
                        android:text="@string/Attendance"
                        android:textSize="14sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/CardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"

                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:foregroundGravity="clip_horizontal|center"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="6dp">

                    <TextView
                        android:id="@+id/chat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/ic_chat"
                        android:drawablePadding="9dp"
                        android:gravity="center"
                        android:padding="40dp"
                        android:text="@string/chat"
                        android:textSize="14sp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"

                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:foregroundGravity="clip_horizontal|center"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="6dp">

                    <TextView
                        android:id="@+id/generate_QR_code_in_admin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/ic_qr_code"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:padding="40dp"
                        android:text="@string/generate_QR_code"
                        android:textSize="14sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/CardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"

                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:foregroundGravity="clip_horizontal|center"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="6dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/ic_plus"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:padding="40dp"
                        android:text="TextView"
                        android:textSize="14sp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"

                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:foregroundGravity="clip_horizontal|center"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="6dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/ic_plus"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:padding="40dp"
                        android:text="TextView"
                        android:textSize="14sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/CardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"

                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:foregroundGravity="clip_horizontal|center"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="6dp">

                    <TextView
                        android:id="@+id/log_out"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/ic_log_out"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:padding="40dp"
                        android:text="@string/Log_out"
                        android:textSize="14sp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kind_of_user"
                android:gravity="center"
                android:textSize="@dimen/welcome_text_size"
                android:layout_alignParentBottom="true"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar_main"
        style="@style/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</RelativeLayout>